server/compilers/goLiteJS/src/test/ml2/invalid/unary7.go
// invalid unary on rune
package main

func main() {
    _ = !'a'
}
